[package]
name = "databse"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dev-dependencies]
trybuild={version="1.0.49",features=["diff"]}



[dependencies]
tokio = {version = "1.43.0", features = ["full"]}
sqlx = {version="0.8.3",features=["postgres","runtime-tokio-native-tls"]}
dotenv = "0.15.0"
quote="0.6"
syn={version="0.15", features = ["extra-traits"]}
utils= {path = "../utils"}